// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - ContactDetails when logged in as buddy renders correctly 1`] = `
Array [
  <Header
    loading={true}
    onButtonClick={[Function]}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
  >
    <Box>
      <Typography
        component="h2"
        variant="h2"
      >
        Contact Details
      </Typography>
    </Box>
  </PageContainer>,
]
`;

exports[`Component - ContactDetails when logged in as buddy renders correctly 2`] = `
Array [
  <Header
    loading={false}
    onButtonClick={[Function]}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
  >
    <Box>
      <Typography
        component="h2"
        variant="h2"
      >
        Contact Details
      </Typography>
    </Box>
  </PageContainer>,
]
`;

exports[`Component - ContactDetails when logged in as newbie renders correctly 1`] = `
Array [
  <Header
    loading={false}
    onButtonClick={[Function]}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
  >
    <Box>
      <Typography
        component="h2"
        variant="h2"
      >
        Contact Details
      </Typography>
    </Box>
  </PageContainer>,
]
`;

exports[`Component - ContactDetails when logged in as newbie renders correctly 2`] = `
Array [
  <Header
    loading={false}
    onButtonClick={[Function]}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
  >
    <Box>
      <Typography
        component="h2"
        variant="h2"
      >
        Contact Details
      </Typography>
    </Box>
  </PageContainer>,
]
`;
